data/usersCode/ddvsd/question1/error.txt
/home/gauravghati/clash2/data/usersCode/ddvsd/question1/code1-0.cpp:1:1: error: ‘ddfhdfbfhfg’ does not name a type
 ddfhdfbfhfg fvdf fg
 ^~~~~~~~~~~
